fix(diary): tweak entry input word wrapping

--- a/src/static/diary/add/styles.css
+++ b/src/static/diary/add/styles.css
@@ -61,7 +61,7 @@ ENTRY & ENTRY CONTAINER
 .entry-input {
     width:100%;
     text-wrap:wrap;
-    word-break: break-all;
+    word-wrap:break-word;
 
     overflow:scroll;
 }
